# Talos

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  LINUX.md  README.md  README.zh-CN.md  SECURITY.md  package-lock.json  package.json
backend/: .env.example  README.md  README.zh-CN.md  alembic.ini  openyak.spec  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  errors.py  main.py
backend/app/agent/: agent.py  permission.py
backend/app/api/: _route.py  agents.py  artifacts.py  auth.py  automations.py  callback_html.py  channels.py  chat.py  config.py  connectors.py  daily_review.py  files.py  fts.py  google_auth.py  health.py  mcp.py  messages.py  models.py  ollama.py  openai_auth.py  openai_compat.py  pdf.py  plugins.py  rapid_mlx.py  remote.py  router.py  saved_agents.py  sessions.py  skills.py  tools.py  usage.py  workspace_memory.py
backend/app/auth/: __init__.py  csrf.py  middleware.py  private_network.py  token.py  tunnel.py  user_session.py
backend/app/channels/: __init__.py  adapter.py  base.py  config.py  dingtalk.py  discord.py  email.py  feishu.py  helpers.py  manager.py  matrix.py  mochat.py  qq.py  registry.py  slack.py  telegram.py  websocket.py  wecom.py  weixin.py  whatsapp.py
backend/app/connector/: __init__.py  model.py  registry.py
backend/app/daily_review/: service.py
backend/app/data/: connectors.json  skills_catalog.json
backend/app/fts/: __init__.py  index.py  watcher.py
backend/app/mcp/: __init__.py  client.py  manager.py  oauth.py  token_store.py  tool_wrapper.py
backend/app/memory/: __init__.py  config.py  injection.py  workspace_memory_model.py  workspace_memory_queue.py  workspace_memory_storage.py  workspace_memory_updater.py
backend/app/models/: __init__.py  base.py  daily_review.py  message.py  project.py  saved_agent.py  scheduled_task.py  session.py  session_file.py  task_run.py  todo.py
backend/app/ollama/: __init__.py  library.py  manager.py
backend/app/plugin/: __init__.py  converter.py  loader.py  manager.py  parser.py
backend/app/provider/: anthropic_provider.py  base.py  catalog.py  factory.py  gemini_provider.py  generic_openai.py  local.py  models_dev.py  ollama.py  openai_compat.py  openai_oauth.py  openai_subscription.py  openrouter.py  rapid_mlx.py  registry.py  vision_allowlist.py
backend/app/rapid_mlx/: __init__.py  catalog.py  manager.py
backend/app/saved_agent/: form_schema.py  runner.py  storage.py
backend/app/scheduler/: engine.py  executor.py  templates.py
backend/app/schemas/: __init__.py  agent.py  automation.py  chat.py  daily_review.py  message.py  (+4 more)
backend/scripts/: download_node.py  update_skills_catalog.py
backend/tests/: conftest.py  test_errors.py
desktop-tauri/src-tauri/: Cargo.toml  build.linux-x64.json  build.macos-aarch64.json  build.macos-x64.json  build.windows.json  installer-hooks.nsh  tauri.conf.json
(+739 files in other folders)
